--- a/.editorconfig
+++ b/.editorconfig
@@ -14,10 +14,11 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
-[*.yml]
-indent_style = space
-
 [*.md]
 indent_style = space
 indent_size = 2
 trim_trailing_whitespace = false
+
+[*.yml]
+indent_style = space
+indent_size = 2
