--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "scripts": {
     "build": "babel src -d lib",
-    "debug": "cross-env DEBUG=* NODE_ENV=development babel-watch src",
-    "dev": "cross-env NODE_ENV=development babel-watch src",
+    "debug": "cross-env DEBUG=* NODE_ENV=development babel-node src",
+    "dev": "cross-env NODE_ENV=development babel-node src",
     "lint": "eslint --fix .",
     "start": "node lib",
     "test": "cross-env NODE_ENV=test nyc mocha --recursive"
@@ -36,7 +36,6 @@
     "babel-plugin-istanbul": "^4.1.5",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
-    "babel-watch": "^2.0.7",
     "cross-env": "^5.1.3",
     "eslint": "^4.18.2",
     "eslint-config-standard": "^10.2.1",
