--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "node": ">=6.0.0"
   },
   "scripts": {
-    "build": "babel src -d lib",
+    "build": "npm run lint && babel src -d lib",
     "debug": "cross-env DEBUG=*,-babel NODE_ENV=development babel-node src",
     "dev": "cross-env NODE_ENV=development babel-node src",
     "lint": "eslint --fix .",
     "start": "node lib",
-    "test": "cross-env NODE_ENV=test nyc mocha --recursive"
+    "test": "npm run lint && cross-env NODE_ENV=test nyc mocha --recursive"
   },
   "repository": {
     "type": "git",
